Added extra functionality to applictaion

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,5 @@
-<p style="color: green"><%= notice %></p>
 
-<%= render @list %>
+<% render @list %>
 
 <div>
   <%= link_to "Edit this list", edit_list_path(@list) %> |
