--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Todo</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +12,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "lists/navbar", list: @list %>
+    <div class="container">
+      <%= render "flash" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
