--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -11,17 +11,16 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+  <div class="form-group">
+  
+    <%= form.text_field :description, class: 'form-control' %>
   </div>
 
-  <div>
-    <%= form.label :completed, style: "display: block" %>
-    <%= form.check_box :completed %>
+  <div class="form-group form-check">
+    <%= form.check_box :completed , class: 'form-check-input'%>
+    <%= form.label :completed, style: "display: block", class: 'form-check-label' %>
   </div>
-
-  <div>
-    <%= form.submit %>
+  <div class="actions">
+    <%= form.submit "Update Todo Item", class: 'btn btn-default' %>
   </div>
 <% end %>
