--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing list</h1>
+<h1>Edit Todo Item</h1>
+<br/>
 
-<%= render "form", list: @list %>
-
-<br>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <%= render 'form', list:@list %>
+  </div>
+</div>
+<br/><br/>
 
 <div>
-  <%= link_to "Show this list", @list %> |
+  <% link_to "Show this list", @list %>
   <%= link_to "Back to lists", lists_path %>
 </div>
