--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,14 +1,58 @@
-<p style="color: green"><%= notice %></p>
 
-<h1>Lists</h1>
 
-<div id="lists">
+<table class="table table-bordered">
+  
+  <tbody>
+    <div id="lists">
   <% @lists.each do |list| %>
-    <%= render list %>
-    <p>
-      <%= link_to "Show this list", list %>
-    </p>
-  <% end %>
-</div>
+  <% if list.completed %>  
+  <tr class="table-secondary">
+    <td class="striker"><%= link_to list.description , edit_list_path(list) %><% list.description %></td>
+    <td>
+      <%= form_for(list) do |form| %>
+        <%= form.text_field :description, type: 'hidden' %>
+        <%= form.check_box :completed, :checked => false, :style => 'visibility: hidden' %>
+         <%= form.submit "Uncross", class: 'btn btn-outline-secondary btn-sm' %>
+        <% end %>
 
-<%= link_to "New list", new_list_path %>
+    </td>
+    <td>
+      <% link_to 'Show', list %>
+      <center><%= link_to 'Delete', list, class: 'btn btn-danger btn-sm', method: :delete, data: { confirm: 'Are you sure? '} %></center>
+    </td>
+   
+  </tr>
+  <% else %>
+    <tr>
+      <td><% list.description %> <%= link_to list.description, edit_list_path(list) %></td>
+      <td>
+        <%= form_for(list) do |form| %>
+        <%= form.text_field :description, type: 'hidden' %>
+        <%= form.check_box :completed, :checked => true, :style => 'visibility: hidden' %>
+         <%= form.submit "Cross Off", class: 'btn btn-outline-secondary btn-sm' %>
+        <% end %>
+      </td>
+      <td>
+        <% link_to 'Show', list %>
+        <% link_to 'Edit', edit_list_path(list) %>
+        <center>
+          <%= link_to 'Delete', list, class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure? '} %>
+          </center>
+     </td>
+  </tr>
+  <% end %>
+
+  <% end %>
+</tbody>
+</table>
+<br/>
+<% link_to "Add toDo Item", new_list_path, class: 'btn btn-success' %>
+
+<br/><br/>
+<%= link_to 'Delete Marked Items', home_trash_em_path, class: 'btn btn-secondary', data: { confirm: 'Are you sure? '} %> 
+<%= link_to 'Delete All Items', home_trash_em_all_path, class: 'btn btn-secondary', data: {confirm: 'Are you sure? '} %>
+
+  
+
+
+
